remove userprofile model and db table
